--- a/.gitignore
+++ b/.gitignore
@@ -30,8 +30,8 @@ projectFilesBackup
 .build
 .dist
 
-/core/client/tpl/hbs-tpl.js
-/core/client/assets/css
+#/core/client/tpl/hbs-tpl.js
+#/core/client/assets/css
 .sass-cache/
 /core/client/assets/sass/config.rb
 /core/client/assets/sass/layouts/config.rb
